# siglo

./: .gitignore  Dockerfile  README.md  com.github.alexr4535.siglo.json  com.github.theironrobin.siglo.json  debug.py  meson.build  org.gnome.siglo.json  python3-modules.json  reinstall.sh
build-aux/meson/: postinstall.py
data/: com.github.alexr4535.siglo.Daemon.service.in  com.github.alexr4535.siglo.appdata.xml.in  com.github.alexr4535.siglo.desktop.in  com.github.alexr4535.siglo.gschema.xml  com.github.theironrobin.siglo.appdata.xml.in  com.github.theironrobin.siglo.desktop.in  com.github.theironrobin.siglo.gschema.xml  meson.build  org.gnome.siglo.appdata.xml.in  org.gnome.siglo.desktop.in  org.gnome.siglo.gschema.xml  siglo.service
po/: POTFILES  meson.build  nl.po
src/: ble_dfu.py  ble_fs.py  bluetooth.py  config.py  daemon.py  hex_time.py  main.py  meson.build  music_service.py  notification_service.py  quick_deploy.py  siglo.gresource.xml  siglo.in  style.css  window.py  window.ui
src/ota/: ble_legacy_dfu_controller.py  nrf_ble_dfu_controller.py  unpacker.py  util.py
